--- a/anna2/index.html
+++ b/anna2/index.html
@@ -28,16 +28,16 @@
             class="sm:bg-no-repeat bg-no-repeat sm:bg-[url('img/bg.svg')] bg-[url('img/mobile-bg.png')] bg-bottom sm:bg-[background-size:100%] sm:bg-cover bg-contain sm:h-[1000px] h-[1000px]">
             <div class="container mx-auto flex flex-col md:flex-row items-center justify-center md:justify-between">
                 <!-- Offer Info -->
-                <div class="md:text-left mt-5 mx-3">
+                <div class="sm:text-left text-center mt-5 mx-3">
                     <div class="flex md:justify-start justify-center sm:mb-4 mb-0">
                         <a target="_blank" href="https://www.anna247.in/"><img src="img/logo.svg" alt="Bonus Offer"
                                 class="w-50" /></a>
                     </div>
-                    <h1 class="text-red-500 sm:text-5xl text-3xl mb-1 font-robocondo text-center">
+                    <h1 class="text-red-500 sm:text-left sm:text-5xl text-3xl mb-1 font-robocondo text-center">
                         5%
                         <span class="text-white sm:text-5xl text-2xl font-robocondo">WELCOME BONUS</span>
                     </h1>
-                    <p class="sm:text-6xl text-3xl text-white mb-6 font-robocondo text-center">
+                    <p class="sm:text-6xl text-3xl text-white mb-6 font-robocondo sm:text-left text-center">
                         UPTO
                         <span class="text-red-500 sm:text-8xl text-5xl font-robocondo font-semibold">₹500,000</span>
                     </p>
@@ -454,7 +454,8 @@
             let d=new FormData(form);
             fetch(url, {
                 method:"POST",
-                body:d
+                body:d,
+                mode: "no-cors" 
             }).then((res)=>res.text())
             .then((finalRes) =>{
                 e.target.signup.innerHTML = "Sign Up";
@@ -463,8 +464,6 @@
             e.preventDefault();
 
         })
-
-
     </script>
     <!-- Script to handle the modal -->
     <script>
