add validation for password

--- a/anna2/index.html
+++ b/anna2/index.html
@@ -47,7 +47,7 @@
                                 <div class="flex justify-center">
                                     <form method="post" id="form"
                                         class="max-w-lg mx-auto p-0 ml-0 rounded-md space-y-8 font-robocondo">
-                                        <div id="res" class="text-green-600 p-4 shadow-lg rounded font-semibold">
+                                        <div id="res" class="text-green-600 shadow-lg rounded font-semibold">
                                         </div>
                                         <!-- Phone Number Field -->
                                         <div
