added privacy and responsible page

--- a/anna2/index.html
+++ b/anna2/index.html
@@ -11,6 +11,10 @@
             tailwind.config = {
                 content: [],
                 theme: {
+                    container: {
+                    center: true,
+                    padding: '2rem',
+                    },
                     extend: {
                         fontFamily: {
                             robocondo: ["Roboto Condensed", "sans-serif"],
@@ -153,7 +157,7 @@
                     <!-- Column 3 -->
                     <div class="text-center md:text-left my-2 sm:col-span-1 order-4">
                         <p class="text-white sm:text-lg text-sm font-robocondo">
-                            <a data-modal-target="modal1" target="_blank" class="cursor-pointer">Responsible
+                            <a href="/anna2/responsible-gambling.html" target="_blank" class="cursor-pointer">Responsible
                                 Gambling</a>
                         </p>
                     </div>
@@ -161,7 +165,7 @@
                     <!-- Column 4 -->
                     <div class="text-center md:text-left my-2 sm:col-span-1 order-5">
                         <p class="text-white sm:text-lg text-sm font-robocondo">
-                            <a data-modal-target="modal2" target="_blank" class="cursor-pointer">Privacy Policy</a>
+                            <a href="/anna2/privacy.html" target="_blank" class="cursor-pointer">Privacy Policy</a>
                         </p>
                     </div>
 
