changes in privacy ;

--- a/anna2/responsible-gambling.html
+++ b/anna2/responsible-gambling.html
@@ -72,7 +72,7 @@
             <p class="py-4">
                 Here’s some tips how you can control your gambling:
             </p>
-            <ul class="px-2">
+            <ul class="px-2 list-disc pl-9">
                 <li>Do not borrow money to gamble</li>
                 <li>Decide on a loss budget before playing and stick to it</li>
                 <li>Use self-limitation tools</li>
